--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,9 +10,7 @@ services:
         ports:
             - "3307:3306"
         volumes:
-            - "./docker/db/data:/var/lib/mysql"
-            - "./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf"
-            - "./docker/db/sql:/docker-entrypoint-initdb.d"
+            - mydb:/var/lib/mysql
         restart: always
     # zuhu-backend:
     #     container_name: zuhu-backend
@@ -22,3 +20,5 @@ services:
     #     depends_on:
     #         - zuhu-db
     #     restart: always
+volumes:
+    mydb:
